--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInTop">
-							<div class="project" style="background-image: url(images/brian2.jpg);">
+							<div class="project" style="background-image: url(images/brian2.png);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 03</a></h3>
