--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 						</div>
 						
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="project" style="background-image: url(images/img-5.jpg);">
+							<div class="project" style="background-image: url(images/brian5.png);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 05</a></h3>
@@ -562,11 +562,11 @@
 							</div>
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-							<div class="project" style="background-image: url(images/img-6.jpg);">
+							<div class="project" style="background-image: url(images/brian6.png);">
 								<div class="desc">
 									<div class="con">
 										<h3><a href="work.html">Work 06</a></h3>
-										<span>Book Printing</span>
+										<span>Gift Cards</span>
 										<p class="icon">
 											<span><a href="#"><i class="icon-share3"></i></a></span>
 											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
