--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
 								<div class="col-md-12">
 									<div class="about-desc">
 										<span class="heading-meta">About Us</span>
-										<h2 class="colorlib-heading">Who Am I?</h2>
-										<p><strong>I'm Brian Ayesiga</strong> On my way. I have been participating in graphics designing and printing for Over <b>six</b> years giving me a profound experience and expertise in print and design technology.</p>
-										<p>Even the all-powerful Pointing Designs across the country i have profoundly participated in them. It is an almost unorthographic enthusiasm i have i at making intuitive design. Trust <b>SoftPrint Media</b> with all kind of design ideas.</p>
+										<h2 class="colorlib-heading">Who We Are?</h2>
+										<p><strong>SoftPrint Media </strong> has been participating in graphics designing and printing for Over <b>six</b> years giving us a profound experience and expertise in print and design technology.</p>
+										<p>Even the all-powerful Pointing Designs across the country we have been part . It is an almost unorthographic enthusiasm we have at making intuitive design. Trust <b>SoftPrint Media</b> with all kind of design ideas.</p>
 									</div>
 								</div>
 							</div>
@@ -146,7 +146,7 @@
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<div class="services color-2">
 										<span class="icon2"><i class="icon-globe-outline"></i></span>
-										<h3>Company Design</h3>
+										<h3>Design</h3>
 									</div>
 								</div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInTop">
@@ -193,7 +193,7 @@
 								</span>
 								<div class="desc">
 									<h3>Innovative Designs</h3>
-									<p>I Design Customer choices.We value the brand of a customer</p>
+									<p>We Design Customer choices.We value the brand of a customer</p>
 									<p>Design is the best ambassador of your brand</p>
 								</div>
 							</div>
@@ -237,7 +237,7 @@
 									<i class="icon-data"></i>
 								</span>
 								<div class="desc">
-									<h3>Quick Copy</h3>
+									<h3>Corporate Branding</h3>
 									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
 								</div>
 							</div>
@@ -257,7 +257,7 @@
 				</div>
 			</section>
 			
-			<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/nasser1.jpg);" data-stellar-background-ratio="0.5">
+			<div id="colorlib-counter" class="colorlib-counters" style="background-image: url(images/brian7.png);" data-stellar-background-ratio="0.5">
 				<div class="overlay"></div>
 				<div class="colorlib-narrow-content">
 					<div class="row">
