--- a/index.html
+++ b/index.html
@@ -623,6 +623,13 @@
 						<p><a href="tel://">Call Brian Now</a></p>
 						</div>
 						</div>
+							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInRight">
+					
+						</div>
+						<div class="colorlib-text" style="margin-right: 30px;">
+							<p>Find us<i class="icon-location" style="color: #0000ff;"  ></i></p>
+							<p  class="map" ><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127672.29919175085!2d32.47177793275465!3d0.3115152999999979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x177dbd338f28854b%3A0x9204eefe6ff00768!2sLight%20Arcade%20Suite%20F15!5e0!3m2!1sen!2sug!4v1656953572712!5m2!1sen!2sug" width="300" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></p>
+						</div>
 						</div>
 						<!--<div class="col-md-7 col-md-push-1">
 							<div class="row">
