--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
 						<i class="icon-phone"></i>
 						</div>
 						<div class="colorlib-text">
-						<p><a href="tel://">Call Brian Now</a></p>
+						<p><a href="tel://">Call Us Now</a></p>
 						</div>
 						</div>
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInRight">
@@ -678,7 +678,7 @@
 				<div class="text-right">
 				<ul class="social-icons">
 				<li id="whatsapp"><a href="https://wa.me/256754556185" title="WhatsApp"><i class="icon-whatsapp"></i></a></li>
-				<li id="whatsapp"><a href="https://wa.me/256754556185" title="WhatsApp"><i class="icon-whatsapp"></i></a></li>
+				<li id="whatsapp"><a href="https://wa.me/256705865950" title="WhatsApp"><i class="icon-whatsapp"></i></a></li>
 
 				</ul>
 				
