--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<li><a href="#" data-nav-section="about">About</a></li>
 		<li><a href="#" data-nav-section="services">Services</a></li>
 		<li><a href="#" data-nav-section="skills">Skills</a></li>
-		<li><a href="#" data-nav-section="education">Our Team</a></li>
+		<li><a href="#" data-nav-section="education">Trusted Partners</a></li>
 		<li><a href="#" data-nav-section="experience">Experience</a></li>
 		<li><a href="#" data-nav-section="work">Work</a></li>
 	
@@ -384,8 +384,8 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Education</span>
-							<h2 class="colorlib-heading animate-box">Education</h2>
+							<span class="heading-meta">Trusted Partners</span>
+							<h2 class="colorlib-heading animate-box">Our Partners</h2>
 						</div>
 					</div>
 					<div class="row">
