--- a/index.html
+++ b/index.html
@@ -444,11 +444,11 @@
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="headingFive">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseSix">Supermedics herbal company 
 									            </a>
 									        </h4>
 									    </div>
-									    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
+									    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
 									        <div class="panel-body">
 									            <p>Motherland Academy &nbsp; <strong>2010-2014</strong> &nbsp; O'level<br> CornerStone High &nbsp;<strong>2015-2016</strong>&nbsp;A'level</p>	
 									        </div>
