--- a/index.html
+++ b/index.html
@@ -442,13 +442,27 @@
 									</div>
 									
 									<div class="panel panel-default">
-									    <div class="panel-heading" role="tab" id="headingFive">
+									    <div class="panel-heading" role="tab" id="headingSix">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseSix">Supermedics herbal company 
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">Supermedics herbal company 
 									            </a>
 									        </h4>
 									    </div>
-									    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
+									    <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
+									        <div class="panel-body">
+									            <p>Motherland Academy &nbsp; <strong>2010-2014</strong> &nbsp; O'level<br> CornerStone High &nbsp;<strong>2015-2016</strong>&nbsp;A'level</p>	
+									        </div>
+									    </div>
+									</div>
+									
+									<div class="panel panel-default">
+									    <div class="panel-heading" role="tab" id="headingSeven">
+									        <h4 class="panel-title">
+									            <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">Chem-Labs Uganda Limited 
+									            </a>
+									        </h4>
+									    </div>
+									    <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
 									        <div class="panel-body">
 									            <p>Motherland Academy &nbsp; <strong>2010-2014</strong> &nbsp; O'level<br> CornerStone High &nbsp;<strong>2015-2016</strong>&nbsp;A'level</p>	
 									        </div>
