--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
 									    </div>
 									    <div id="collapseTwelve" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwelve">
 									        <div class="panel-body">
-									            <p>Located  &nbsp; <strong>2010-2014</strong> &nbsp; O'level<br> CornerStone High &nbsp;<strong>2015-2016</strong>&nbsp;A'level</p>	
+									            <p>Motherland academy is an O' and A'level located in Nabweru</p>	
 									        </div>
 									    </div>
 									</div>
@@ -548,7 +548,7 @@
 									    </div>
 									    <div id="collapseThirten" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThirten">
 									        <div class="panel-body">
-									            <p>Motherland Academy &nbsp; <strong>2010-2014</strong> &nbsp; O'level<br> CornerStone High &nbsp;<strong>2015-2016</strong>&nbsp;A'level</p>	
+									            <p>The world's largest peacebuilding organization is also part of our trusted customers </p>	
 									        </div>
 									    </div>
 									</div>
@@ -562,7 +562,7 @@
 									    </div>
 									    <div id="collapseForten" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingForten">
 									        <div class="panel-body">
-									            <p>Motherland Academy &nbsp; <strong>2010-2014</strong> &nbsp; O'level<br> CornerStone High &nbsp;<strong>2015-2016</strong>&nbsp;A'level</p>	
+									            <p>We have been making work for sanyulyo financial services <br>Located in Kampala  </p>
 									        </div>
 									    </div>
 									</div>
