--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
 									    </div>
 									    <div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
 									        <div class="panel-body">
-									            <p>Motherland Academy &nbsp; <strong>2010-2014</strong> &nbsp; O'level<br> CornerStone High &nbsp;<strong>2015-2016</strong>&nbsp;A'level</p>	
+									            <p></p>	
 									        </div>
 									    </div>
 									</div>
@@ -492,7 +492,7 @@
 									    </div>
 									    <div id="collapseNine" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingNine">
 									        <div class="panel-body">
-									            <p>Motherland Academy &nbsp; <strong>2010-2014</strong> &nbsp; O'level<br> CornerStone High &nbsp;<strong>2015-2016</strong>&nbsp;A'level</p>	
+									            <p>A Christian based institution located off bombo road</p>	
 									        </div>
 									    </div>
 									</div>
@@ -506,7 +506,7 @@
 									    </div>
 									    <div id="collapseTen" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTen">
 									        <div class="panel-body">
-									            <p>Motherland Academy &nbsp; <strong>2010-2014</strong> &nbsp; O'level<br> CornerStone High &nbsp;<strong>2015-2016</strong>&nbsp;A'level</p>	
+									            <p>Air water Earth is a local government engineering firm in Uganda.They're are our good customers</p>	
 									        </div>
 									    </div>
 									</div>
@@ -520,7 +520,7 @@
 									    </div>
 									    <div id="collapseEleven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEleven">
 									        <div class="panel-body">
-									            <p>Motherland Academy &nbsp; <strong>2010-2014</strong> &nbsp; O'level<br> CornerStone High &nbsp;<strong>2015-2016</strong>&nbsp;A'level</p>	
+									            <p>The experienced security professionals at Jet-Tech Security works with us</p>	
 									        </div>
 									    </div>
 									</div>
