--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					   		</div>
 				   		</div>
 				   	</li>
-						<li style="background-color: rgba(255,140,0,0.7);">
+						<li style="background-color: rgba(138,98,74,0.4);">
 				   		<div class="overlay"></div>
 				   		<div class="container-fluid">
 				   			<div class="row">
@@ -253,7 +253,7 @@
 								</span>
 								<div class="desc">
 									<h3>Corporate Branding</h3>
-									<p>Separated they live in Bookmarksgrove right at the coast of the Semantics</p>
+									<p>Attitude Brands &nbsp; Symbolic Brands &nbsp; Functional Brands &nbsp; Individual Brands &nbsp; more </p>
 								</div>
 							</div>
 						</div>
@@ -302,8 +302,8 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">My Specialty</span>
-							<h2 class="colorlib-heading animate-box">My Skills</h2>
+							<span class="heading-meta">Our Specialty</span>
+							<h2 class="colorlib-heading animate-box">Skills</h2>
 						</div>
 					</div>
 					<div class="row">
