--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 									         <div class="panel-body">
 									            <div class="row">
 										      		<div class="col-md-6">
-										      			<p>Am currently taking a course on certified public accountants  </p>
+										      			<p>An international mission organization based in over 150 nations around the globe has been trusting softprint media with design and printing work</p>
 										      		</div>
 										      		
 										      	</div>
@@ -422,7 +422,7 @@
 									    </div>
 									    <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
 									        <div class="panel-body">
-									            <p>I became a self learner of graphic designing way back in 2017.Far from that time i have always committed all my time to designs giving me enough experience better than anyone else.</p>	
+									            <p></p>	
 									        </div>
 									    </div>
 									</div>
@@ -436,7 +436,7 @@
 									    </div>
 									    <div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 									        <div class="panel-body">
-									            <p>Motherland Academy &nbsp; <strong>2010-2014</strong> &nbsp; O'level<br> CornerStone High &nbsp;<strong>2015-2016</strong>&nbsp;A'level</p>	
+									            <p>A non profit organization aimed at ending modern slavery and human trafficking prints and designs their work with softprint media</p>	
 									        </div>
 									    </div>
 									</div>
