--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<div class="text-center">
 		<div class="author-img" style="background-image: url(images/brian1.png);"></div>
 		<h1 id="colorlib-logo"><a href="index.html">SoftPrint Media </a></h1>
-		<span class="position"><a href="#">Graphics Designer</a> in Uganda</span>
+		<span class="position"><a href="#">Graphics & Printing Co.</a> in Uganda</span>
 		</div>
 		<nav id="colorlib-main-menu" role="navigation" class="navbar">
 		<div id="navbar" class="collapse">
@@ -95,7 +95,7 @@
 						   					<h1>Hi! <br>I'm Brian</h1>
 						   					<h2>Designer at SoftPrint Media Uganda  </h2>
 						   				
-												<p><a class="btn btn-primary btn-learn">Call me<i class="icon-phone"></i></a></p>
+												<p><a href="tel:+256754556185" class="btn btn-primary btn-learn">Call me<i class="icon-phone"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -110,7 +110,7 @@
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>Am Johnmary <br>Designer at SoftPrintMedia<h1>
-												<p><a class="btn btn-primary btn-learn">Call me <i class="icon-phone"></i></a></p>
+												<p><a href="tel:+256705865950" class="btn btn-primary btn-learn">Call me <i class="icon-phone"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -126,7 +126,7 @@
 					   					<div class="desc">
 						   					<h1>Am Ben<br></h1>
 												<h2>SoftPrint media Designer</h2>
-												<p><a class="btn btn-primary btn-learn">Contact me <i class="icon-phone"></i></a></p>
+												<p><a href="+256752079208" class="btn btn-primary btn-learn">Contact me <i class="icon-phone"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
@@ -181,7 +181,7 @@
 								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 									<div class="hire">
 										<h2>A warm Welcome to <b>SoftPrint Media</b><br>Over 1M+ projects done sucessfully!</h2>
-										<a href="#" class="btn-hire">Hire Us</a>
+										<a href="tel:+256754556185" class="btn-hire">Hire Us</a>
 									</div>
 								</div>
 							</div>
