--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
 						<i class="icon-phone"></i>
 						</div>
 						<div class="colorlib-text">
-						<p><a href="tel://">Call Us Now</a></p>
+						<p><a href="tel:+256754556185">Call Us Now</a></p>
 						</div>
 						</div>
 							<div class="colorlib-feature colorlib-feature-sm animate-box" data-animate-effect="fadeInRight">
