--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -806,8 +807,8 @@
 						<div id="social-icons">
 							<div class="text-right">
 								<ul class="social-icons">
-								<li id="whatsapp"><a href="https://wa.me/256754556185" title="WhatsApp"><i class="icon-whatsapp" ></i></a></li>
-								<li id="whatsapp"><a href="https://wa.me/256705865950" title="WhatsApp"><i class="icon-whatsapp"></i>
+								<li id="whatsapp"><a href="https://wa.me/256754556185" title="WhatsApp"><i class="fab fa-whatsapp" ></i></a></li>
+								<li id="whatsapp"><a href="https://wa.me/256705865950" title="WhatsApp"><i class="fab fa-whatsapp"></i>
 							</div>
 						</div>
 					</div>
