--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					   					<div class="desc">
 						   					<h1>Am Ben<br></h1>
 												<h2>SoftPrint media Designer</h2>
-												<p><a href="+256752079208" class="btn btn-primary btn-learn">Contact me <i class="icon-phone"></i></a></p>
+												<p><a href="tel:+256752079208" class="btn btn-primary btn-learn">Contact me <i class="icon-phone"></i></a></p>
 											</div>
 					   				</div>
 					   			</div>
