--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
 					</div>
 					<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-12">
-							<p class="work-menu"><span><a href="#" class="active">Graphic Design</a></span> <span><a href="#">Printing</a></span></p>
+							<p class="work-menu"><span><a href="#" class="active">Graphic Design & printing </a></span></p>
 						</div>
 					</div>
 					<div class="row">
@@ -647,10 +647,10 @@
 							<div class="project" style="background-image: url(images/brian4.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 01</a></h3>
+										<h3>Work 01</h3>
 										<span>Graphics</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i>order now</a></span>
+											<span><i class="icon-share3"></i>order now</span>
 								
 											
 										</p>
@@ -662,12 +662,12 @@
 							<div class="project" style="background-image: url(images/brian3.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 02</a></h3>
+										<h3>Work 02</h3>
 										<span>Printing</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											<span><i class="icon-share3"></i></span>
+											<span><i class="icon-eye"></i> 100</span>
+											<span><i class="icon-heart"></i> 49</span>
 										</p>
 									</div>
 								</div>
@@ -677,12 +677,12 @@
 							<div class="project" style="background-image: url(images/brian2.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 03</a></h3>
+										<h3>Work 03</h3>
 										<span>Accounting</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											<span><i class="icon-share3"></i></span>
+											<span><i class="icon-eye"></i> 100</span>
+											<span><i class="icon-heart"></i> 49</span>
 										</p>
 									</div>
 								</div>
@@ -693,12 +693,12 @@
 							<div class="project" style="background-image: url(images/brian5.png);">
 								<div class="desc">
 									<div class="con">
-										<h3><a href="work.html">Work 05</a></h3>
+										<h3>Work 05</h3>
 										<span>Graphic, Logo</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											<span><i class="icon-share3"></i></span>
+											<span><i class="icon-eye"></i> 100</span>
+											<span><i class="icon-heart"></i> 49</span>
 										</p>
 									</div>
 								</div>
@@ -711,9 +711,9 @@
 										<h3><a href="work.html">Work 06</a></h3>
 										<span>Gift Cards</span>
 										<p class="icon">
-											<span><a href="#"><i class="icon-share3"></i></a></span>
-											<span><a href="#"><i class="icon-eye"></i> 100</a></span>
-											<span><a href="#"><i class="icon-heart"></i> 49</a></span>
+											<span><i class="icon-share3"></i></span>
+											<span><i class="icon-eye"></i> 100</span>
+											<span><i class="icon-heart"></i> 49</span>
 										</p>
 									</div>
 								</div>
@@ -732,9 +732,9 @@
   <ul class="social-icons">
   <li id="whatsapp"><a href="https://wa.me/256789732515" title="WhatsApp"><i class="fab fa-whatsapp"></i></a></li>
  
-  <li id="linked"><a href="http://www.instagram.com/arrowcordstudios" title="Instagram"><i class="fab fa-instagram"></i></a></li>
+  <li id="whatsapp"><a href="http://wa.me/256705865950" title="whatsapp"><i class="fab fa-whatsapp"></i></a></li>
 
-  <li id="twitter"><a href="https://twitter.com/joshAbooki?t=v-bZavh95hnam5vxYT0PsQ&s=01" title="twitter" ><i class="fab fa-twitter"></i></a></li>
+  <li id="twitter"><a href="https://twitter.com/joshAbooki?t=v-bZavh95hnam5vxYT0PsQ&s=01" title="twitter" ><i class="fab fa-facebook"></i></a></li>
 
   </ul>
 
