--- a/index.html
+++ b/index.html
@@ -649,11 +649,11 @@
 									<div class="con">
 										<h3>Work 01</h3>
 										<span>Graphics</span>
-										<p class="icon">
+										<!--<p class="icon">
 											<span><i class="icon-share3"></i>order now</span>
 								
 											
-										</p>
+										</p>-->
 									</div>
 								</div>
 							</div>
@@ -664,11 +664,11 @@
 									<div class="con">
 										<h3>Work 02</h3>
 										<span>Printing</span>
-										<p class="icon">
+										<!--<p class="icon">
 											<span><i class="icon-share3"></i></span>
 											<span><i class="icon-eye"></i> 100</span>
 											<span><i class="icon-heart"></i> 49</span>
-										</p>
+										</p>-->
 									</div>
 								</div>
 							</div>
@@ -679,11 +679,11 @@
 									<div class="con">
 										<h3>Work 03</h3>
 										<span>Accounting</span>
-										<p class="icon">
+									<!--<p class="icon">
 											<span><i class="icon-share3"></i></span>
 											<span><i class="icon-eye"></i> 100</span>
 											<span><i class="icon-heart"></i> 49</span>
-										</p>
+										</p>-->
 									</div>
 								</div>
 							</div>
@@ -695,11 +695,11 @@
 									<div class="con">
 										<h3>Work 05</h3>
 										<span>Graphic, Logo</span>
-										<p class="icon">
+										<!--<p class="icon">
 											<span><i class="icon-share3"></i></span>
 											<span><i class="icon-eye"></i> 100</span>
 											<span><i class="icon-heart"></i> 49</span>
-										</p>
+										</p>-->
 									</div>
 								</div>
 							</div>
@@ -710,11 +710,11 @@
 									<div class="con">
 										<h3><a href="work.html">Work 06</a></h3>
 										<span>Gift Cards</span>
-										<p class="icon">
+										<!--<p class="icon">
 											<span><i class="icon-share3"></i></span>
 											<span><i class="icon-eye"></i> 100</span>
 											<span><i class="icon-heart"></i> 49</span>
-										</p>
+										</p>-->
 									</div>
 								</div>
 							</div>
