--- a/index.html
+++ b/index.html
@@ -730,11 +730,11 @@
 			<div id="social-icons">
   <div class="text-right">
   <ul class="social-icons">
-  <li id="whatsapp"><a href="https://wa.me/256789732515" title="WhatsApp"><i class="fab fa-whatsapp"></i></a></li>
+  <li id="whatsapp"><a href="https://wa.me/256754556185" title="WhatsApp"><i class="fab fa-whatsapp"></i></a></li>
  
   <li id="whatsapp"><a href="http://wa.me/256705865950" title="whatsapp"><i class="fab fa-whatsapp"></i></a></li>
 
-  <li id="twitter"><a href="https://twitter.com/joshAbooki?t=v-bZavh95hnam5vxYT0PsQ&s=01" title="twitter" ><i class="fab fa-facebook"></i></a></li>
+  <li id="twitter"><a href="#" title="twitter" ><i class="fab fa-facebook"></i></a></li>
 
   </ul>
 
