--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
 						<i class="icon-location"></i>
 						</div>
 						<div class="colorlib-text">
-						<p>Nasser Road,Light House Room D02</p>
+						<p>Nasser Road,Light Arcade Room D02</p>
 						</div>
 						</div>
 						
