--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
 						<div class="col-md-7 col-md-push-1">
 							<div class="row">
 								<div class="col-md-10 col-md-offset-1 col-md-pull-1 animate-box" data-animate-effect="fadeInRight">
-									<form action="">
+									<form action="mail,php" method="POST">
 										<div class="form-group">
 											<input type="text" class="form-control" placeholder="Name">
 										</div>
@@ -800,7 +800,7 @@
 											<textarea name="" id="message" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
 										</div>
 										<div class="form-group">
-											<a href="sms:+256789732515"><input type="submit" class="btn btn-primary btn-send-message" value="Send Message"></a>
+											<input type="submit" class="btn btn-primary btn-send-message" value="Send Message">
 										</div>
 									</form>
 								</div>
