--- a/index.html
+++ b/index.html
@@ -836,7 +836,8 @@
 	<script src="js/owl.carousel.min.js"></script>
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
-	
+	<script src="//code.tidio.co/nsdogaqwfqtvy4nkjenesdhukt3d9jjs.js" async></script>
+		
 	
 	<!-- MAIN JS -->
 	<script src="js/main.js"></script>
